Begin Timer model

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,6 +12,9 @@
       <div style="text-align:center;">
         <%= button_to 'Start timer', root_url %>
       </div>
+      <h2>
+        <%= Time.now %>
+      </h2>
     </div>
   </body>
 </html>
