--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
     <div class="center jumbotron">
       <h1>Counter App</h1>
       <div style="text-align:center;">
-        <%= button_to 'Start timer', root_url %>
+        <%= button_to 'Timer App', stopwatch_path, method: :get %>
       </div>
       <h2>
         <%= Time.now %>
