--- a/app/views/timers/show.html.erb
+++ b/app/views/timers/show.html.erb
@@ -1,15 +1,17 @@
 <h1>
-  This is the timer!
+Counter <%= @timer.id %>
 </h1>
 <div class="container">
   <div id='counter'>
     <h2><clock><%= @timer.elapsed_time %></clock></h2>
-    <button class="btn btn-success start">Start</button>
-    <% javascript_include_tag "counter"%>
+    <% #javascript_include_tag "counter"%>
+    <script>
+      var myVar = setInterval(myTimer, 1000);
+      var time = <%= @timer.elapsed_time %>
+      function myTimer() {
+        document.querySelector("clock").innerHTML = time;
+        time++;
+      }
+    </script>
   </div>
 </div>
-
-
-<h3 id='change'>
-  <%= @timer.elapsed_time %>
-</h3>
