Add delete action and new timer navigation

--- a/app/views/timers/index.html.erb
+++ b/app/views/timers/index.html.erb
@@ -2,6 +2,9 @@
 
 <ul id=timers>
   <% @timers.each do |timer| %>
-    <li><%= link_to "Timer #{timer.id}", timer_path(timer), class: "btn btn-secondary" %> : <%= timer.elapsed_time %></li>
+    <li>
+      <%= link_to "Timer #{timer.id}", timer_path(timer), class: "btn btn-secondary" %> : <%= timer.elapsed_time %>
+      | <%= link_to "delete", timer, method: :delete, data: {confirm: "You sure?"} %>
+    </li>
   <% end %>
 </ul>
