--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -2,5 +2,5 @@
   Stopwatch!
 </h1>
 <div style="text-align:center;">
-  <%= button_to 'Start Stopwatch', stopwatch_path%>
+  <%= button_to 'Start Stopwatch', stopwatch_path, class: "btn btn-primary"%>
 </div>
