--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <%= link_to "Timers", timers_index_path, class: "nav-link" %></li>
+          <li class="nav-item"> <%= link_to "New Timer", stopwatch_path, class: "nav-link" %></li>
         </ul>
       </div>
     </nav>
