Add remember methods to timer model

--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Stopwatch!
+  New Timer
 </h1>
 <div style="text-align:center;">
   <%= button_to 'Start Stopwatch', stopwatch_path, class: "btn btn-primary"%>
