--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <nav nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <%= link_to "Counter App", root_path, id: "logo", class: "navbar-brand" %>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
