--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <%= link_to "Timers", timers_index_path, class: "nav-link" %></li>
-          <li class="nav-item"> <%= link_to "New Timer", stopwatch_path, class: "nav-link" %></li>
+          <% if logged_in? %>
+            <li class="nav-item"> <%= link_to "Reset Timer", '#', class: "nav-link" %></li>
+          <% else %>
+            <li class="nav-item"> <%= link_to "New Timer", stopwatch_path, class: "nav-link" %></li>
+          <% end %>
+          
         </ul>
       </div>
     </nav>
