--- a/app/views/timers/index.html.erb
+++ b/app/views/timers/index.html.erb
@@ -5,6 +5,7 @@
     <li>
       <%= link_to "Timer #{timer.id}", timer_path(timer), class: "btn btn-secondary" %> : <%= timer.elapsed_time %>
       | <%= link_to "delete", timer, method: :delete, data: {confirm: "You sure?"} %>
+      | <%= link_to "log in as", login_path(id: timer.id), method: :post%>
     </li>
   <% end %>
 </ul>
