--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
           <% if logged_in? %>
-            <li class="nav-item"> <%= link_to "Log out", '#', class: "nav-link" %></li>
+            <li class="nav-item"> <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %></li>
           <% end %>
         </ul>
       </div>
