--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,9 +9,15 @@
     
     <div class="center jumbotron">
       <h1>Counter App</h1>
-      <div style="text-align:center;">
-        <%= button_to 'Timers', timers_index_path, method: :get, class: "btn btn-primary" %>
-      </div>
+      <% if cookies[:lockup] %>
+        <div style="text-align:center;">
+          <%= button_to 'Timers', timers_index_path, method: :get, class: "btn btn-primary" %>
+        </div>
+      <% else %>
+        <div style="text-align:center;">
+          <%= button_to 'New Timer', stopwatch_path, method: :get, class: "btn btn-primary" %>
+        </div>
+      <% end %>
       <% if logged_in? %>
       <div class="container">
         <div id='counter'>
