Add secrets.yml to gitignore

--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -2,5 +2,5 @@
   New Timer
 </h1>
 <div style="text-align:center;">
-  <%= button_to 'Start Stopwatch', stopwatch_path, class: "btn btn-primary"%>
+  <%= button_to 'Start Timer', stopwatch_path, class: "btn btn-primary"%>
 </div>
