--- a/app/views/timers/show.html.erb
+++ b/app/views/timers/show.html.erb
@@ -1,16 +1,18 @@
 <h1>
 Counter <%= @timer.id %>
 </h1>
-<div class="container">
-  <div id='counter'>
-    <h2><clock><%= @timer.elapsed_time %></clock></h2>
-    <script>
-      var myVar = setInterval(myTimer, 1000);
-      var time = <%= @timer.elapsed_time %>
-      function myTimer() {
-        document.querySelector("clock").innerHTML = time;
-        time++;
-      }
-    </script>
+<body>
+  <div class="container">
+    <div id='counter'>
+      <h2><clock><%= @timer.elapsed_time %></clock></h2>
+      <script data-turbolinks-eval="false">
+        var myVar = setInterval(myTimer, 1000);
+        var time = <%= @timer.elapsed_time %>
+        function myTimer() {
+          document.querySelector("clock").innerHTML = time;
+          time++;
+        }
+      </script>
+    </div>
   </div>
-</div>
+</body>
