Add footer and begin frontend redesign

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,10 @@
+$theme-colors: (
+  "primary": #a70000
+);
+
 @import "bootstrap";
+
+
 
 h1,h2 {
   text-align: center;
@@ -16,3 +22,35 @@ button {
   list-style-type: none;
   margin: 10px 0;
 }
+
+// footer
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a {
+  color: #555;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
+}
+
