--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
   <body>
     
     <div class="center jumbotron">
-      <h1>Counter App</h1>
+      <h1>Six Million Stories</h1>
       <% if cookies[:lockup] %>
         <div style="text-align:center;">
           <%= button_to 'Timers', timers_index_path, method: :get, class: "btn btn-primary" %>
@@ -33,6 +33,8 @@
         </div>
       </div>
       <% end %>
+      <br>
+      <p>Hello World! We have been inspired by the literature of olde and want to make a difference!</p>
     </div>
   </body>
 </html>
