--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,28 +9,10 @@
   </head>
 
   <body>
-    <nav nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <%= link_to "Counter App", root_path, id: "logo", class: "navbar-brand" %>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <% if cookies[:lockup] %>
-          <li class="nav-item"> <%= link_to "Timers", timers_index_path, class: "nav-link" %></li>
-          <% end %>
-          <% if logged_in? %>
-            <li class="nav-item"> <%= link_to "Reset Timer", '#', class: "nav-link" %></li>
-          <% else %>
-            <li class="nav-item"> <%= link_to "New Timer", stopwatch_path, class: "nav-link" %></li>
-          <% end %>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <% if logged_in? %>
-            <li class="nav-item"> <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %></li>
-          <% end %>
-        </ul>
-      </div>
-    </nav>
+    <%= render 'layouts/header' %>
     <div class="container">
       <%= yield %>
+      <%= render 'layouts/footer' %>
     </div>
   </body>
 </html>
