--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,15 @@
-<nav nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <%= link_to "Six Million Stories", root_path, id: "logo", class: "navbar-brand" %>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <% if cookies[:lockup] %>
-      <li class="nav-item"> <%= link_to "Timers", timers_index_path, class: "nav-link" %></li>
+        <li class="nav-item"> <%= link_to "Timers", timers_index_path, class: "nav-link" %></li>
       <% end %>
       <% if logged_in? %>
         <li class="nav-item"> <%= link_to "Reset Timer", '#', class: "nav-link" %></li>
+        <li class="nav-item"> <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %></li>
       <% else %>
         <li class="nav-item"> <%= link_to "New Timer", stopwatch_path, class: "nav-link" %></li>
-      <% end %>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-      <% if logged_in? %>
-        <li class="nav-item"> <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %></li>
       <% end %>
     </ul>
   </div>
