--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
   <body>
     
     <div class="center jumbotron">
-      <h1>Six Million Stories</h1>
+      <h1>Welcome to the Home Page</h1>
       <% if cookies[:lockup] %>
         <div style="text-align:center;">
           <%= button_to 'Timers', timers_index_path, method: :get, class: "btn btn-primary" %>
@@ -18,23 +18,6 @@
           <%= button_to 'New Timer', stopwatch_path, method: :get, class: "btn btn-primary" %>
         </div>
       <% end %>
-      <% if logged_in? %>
-      <div class="container">
-        <div id='counter'>
-          <h2 class="clock"><%= current_timer.elapsed_time %></h2>
-          <script>
-            var myVar = setInterval(myTimer, 1000);
-            var time = <%= current_timer.elapsed_time %>
-            function myTimer() {
-              document.querySelector(".clock").innerHTML = time;
-              time++;
-            }
-          </script>
-        </div>
-      </div>
-      <% end %>
-      <br>
-      <p>Hello World! We have been inspired by the literature of olde and want to make a difference!</p>
     </div>
   </body>
 </html>
