Add cyclical story reference with cookies

--- a/app/views/timers/show.html.erb
+++ b/app/views/timers/show.html.erb
@@ -13,7 +13,7 @@
   </div>
   
   <hr>
-
-  <%= render "layouts/stories/#{rand(2)}" %>
+  
+  <%= render "layouts/stories/#{cookies[:story_num]}" %>
   
 </div>
