Minor layout changes

--- a/app/views/timers/show.html.erb
+++ b/app/views/timers/show.html.erb
@@ -1,5 +1,4 @@
-<h1>Counter</h1>
-<div class="container">
+<div class="container show-body">
   <div id='counter'>
     <h2><clock><%= @timer.elapsed_time %></clock></h2>
     <script data-turbolinks-eval=false>
