--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -6,6 +6,11 @@ $theme-colors: (
 
 @import "bootstrap";
 
+clock {
+  color: #a70000;
+  font-size: 64px;
+}
+
 h1,h2 {
   text-align: center;
 }
@@ -28,6 +33,10 @@ button {
 
 #timers-item {
   margin: 5px 0;
+}
+
+.show-body {
+  padding-top: 20px;
 }
 
 /* footer */
@@ -63,4 +72,3 @@ footer ul li {
   float: left;
   margin-left: 15px;
 }
-
