attempt to add a d3.js test

--- a/app/views/timers/show.html.erb
+++ b/app/views/timers/show.html.erb
@@ -13,6 +13,12 @@
   
   <hr>
   
+  <div id="plot-container">
+    <svg id="plot"></svg>
+  </div>
+  
+  <hr>
+  
   <%= render "layouts/stories/#{cookies[:story_num]}" %>
   
 </div>
