Complete story display redesign

--- a/app/views/layouts/stories/_0.html.erb
+++ b/app/views/layouts/stories/_0.html.erb
@@ -1,23 +1,15 @@
-<div class="container-fluid">
-  
-  <h2 class="myClass" color="white">Gail Elad</h2>  
-  
-  <br>  
-   
-  <center><img src = "https://www.holocaustcenterseattle.org/images/archive/photos/Gail.jpg"></img></center>
-    
-  <br>
-  
-  <p class="lead" class="myClass">Gail was born on October 10, 1940 in Warsaw, Poland, just six days before the establishment of the Warsaw Ghetto
-  Town was surrounded by walls and guards
-  Over 400,000 Jews were crammed into the ghetto at some point
-  Over 100,000 died in the ghetto due to the horrible conditions
-  Gail was smuggled out of the ghetto by her father in a duffel bag at the age of two, and her father hid her with a Polish family until the end of World War II
-  Gail’s mother died at a Nazi concentration camp
-  Gail lived in an orphanage with jewish orphans due to her dad’s work/dedication to saving the parentless children
-  In 1946, Gail arrived in the U.S. at Ellis Island, and started her new life
-  Grew up in California and became a teacher
-  Died of pancreatic cancer in 2008 
-  </p>
+<img class="img-fluid img-thumbnail visual img-responsive pull-left" src="https://www.holocaustcenterseattle.org/images/archive/photos/Gail.jpg"></img>
 
-</div>
+<h1>Gail Elad</h1> 
+
+<p class="lead">Gail was born on October 10, 1940 in Warsaw, Poland, just six days before the establishment of the Warsaw Ghetto
+Town was surrounded by walls and guards
+Over 400,000 Jews were crammed into the ghetto at some point
+Over 100,000 died in the ghetto due to the horrible conditions
+Gail was smuggled out of the ghetto by her father in a duffel bag at the age of two, and her father hid her with a Polish family until the end of World War II
+Gail’s mother died at a Nazi concentration camp
+Gail lived in an orphanage with jewish orphans due to her dad’s work/dedication to saving the parentless children
+In 1946, Gail arrived in the U.S. at Ellis Island, and started her new life
+Grew up in California and became a teacher
+Died of pancreatic cancer in 2008 
+</p>
