--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -46,8 +46,8 @@ footer {
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 25px;
+  margin-right: 25px;
   padding-bottom: 20px;
 }
 
@@ -72,3 +72,30 @@ footer ul li {
   float: left;
   margin-left: 15px;
 }
+
+.box {
+    border-radius: 3px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    padding: 10px 50px;
+    text-align: right;
+    display: block;
+    margin-top: 60px;
+}
+
+.visual {
+  display: block;
+  vertical-align: middle;
+  height: auto;
+  width: 20%;
+  left: 50%;
+  margin-right: 20px;
+  margin-top: 20px;
+  // transform: translateX(-50%);
+  // margin: auto;
+  float: left;
+}
+
+.lead {
+  text-align: left;
+}
+
