--- a/app/views/layouts/stories/_1.html.erb
+++ b/app/views/layouts/stories/_1.html.erb
@@ -1,13 +1,12 @@
-<h2>Henry Friedman</h2>
+<img class="img-fluid img-thumbnail visual img-responsive pull-left" src="https://www.holocaustcenterseattle.org/images/survivor-voices/images-HF/HF-3.jpg"></img>
 
-<p class="lead">
-  Born in 1928 in Brody, Poland
-In 1941, jews were forbidden to go to school, and were required to wear the star of David on their clothes
-If seen without the armband, jews would be beaten, including his mother
-The Friedman family was warned about the Gestapo coming for them, so they were able to flee in time. 
-In 1942, the family went into hiding with the help of two different Ukrainian families 
-The family hid in a small space in a barn owned by the family of Julia Symchuck for 18 months
-The friedmans were freezing and slowly starved for those 18 months.
-Were liberated in March 1944 by the Russians
+<h1>Henry Friedman</h1> 
 
-</p>
+<p class="lead">  Born in 1928 in Brody, Poland
+    In 1941, jews were forbidden to go to school, and were required to wear the star of David on their clothes
+    If seen without the armband, jews would be beaten, including his mother
+    The Friedman family was warned about the Gestapo coming for them, so they were able to flee in time. 
+    In 1942, the family went into hiding with the help of two different Ukrainian families 
+    The family hid in a small space in a barn owned by the family of Julia Symchuck for 18 months
+    The friedmans were freezing and slowly starved for those 18 months.
+    Were liberated in March 1944 by the Russians</p>
