--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -6,11 +6,6 @@ $theme-colors: (
 
 @import "bootstrap";
 
-clock {
-  color: #a70000;
-  font-size: 64px;
-}
-
 h1,h2 {
   text-align: center;
 }
@@ -19,13 +14,11 @@ body {
   padding-top: 60px;
 }
 
-p {
-  text-align: center;
-}
-
 button {
   float: center;
 }
+
+/* index */
 
 #timers {
   list-style-type: none;
@@ -35,43 +28,18 @@ button {
   margin: 5px 0;
 }
 
+/* show */
+
 .show-body {
   padding-top: 20px;
 }
 
-/* footer */
-
-footer {
-  margin-top: 45px;
-  padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  color: #777;
-  margin-left: 25px;
-  margin-right: 25px;
-  padding-bottom: 20px;
+clock {
+  color: #a70000;
+  font-size: 64px;
 }
 
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 15px;
-}
+/* show story content */
 
 .box {
     border-radius: 3px;
@@ -90,8 +58,6 @@ footer ul li {
   left: 50%;
   margin-right: 20px;
   margin-top: 20px;
-  // transform: translateX(-50%);
-  // margin: auto;
   float: left;
 }
 
@@ -99,3 +65,35 @@ footer ul li {
   text-align: left;
 }
 
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+  margin-left: 25px;
+  margin-right: 25px;
+  padding-bottom: 20px;
+
+
+  a {
+    color: #555;
+    &:hover {
+      color: #222;
+    }
+  }
+  
+  small {
+    float: left;
+  }
+  
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
+}
