--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <nav>
     <small>
       <ul class="list-unstyled">
-        <li><%= link_to "About", '#'%></li>
+        <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Contact", '#'%></li>
       </ul>
     </small>
