--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <li class="nav-item"> <%= link_to "Reset Timer", '#', class: "nav-link" %></li>
         <li class="nav-item"> <%= link_to "Log out", logout_path, class: "nav-link", method: :delete %></li>
       <% else %>
-        <li class="nav-item"> <%= link_to "New Timer", stopwatch_path, class: "nav-link" %></li>
+        <li class="nav-item"> <%= link_to "New Timer", new_timer_path, class: "nav-link" %></li>
       <% end %>
     </ul>
   </div>
