--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -1,6 +1,7 @@
 <h1>
   New Counter
 </h1>
+<%= render 'shared/error_messages' %>
 <div class="wrapper">
   <%= form_with model: @timer, :html => {:class => "timer-form"} do |f| %>
     <div class="form-group">
