--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -1,9 +1,9 @@
 <h1>
   New Counter
 </h1>
-<%= render 'shared/error_messages' %>
 <div class="wrapper">
   <%= form_with model: @timer, :html => {:class => "timer-form"} do |f| %>
+    <%= render 'shared/error_messages', target: @timer %>
     <div class="form-group">
       <%= f.label :email, class: "control-label" %>
       <%= f.email_field :email, class: "form-control" %>
