--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,12 +2,13 @@
   <nav>
     <small>
       <ul class="list-unstyled">
-        <li><%= link_to "About", about_path %></li>
-        <li><%= link_to "Contact", '#'%></li>
+        <li><%= link_to "Six Million Stories", '#'%></li>
       </ul>
     </small>
     <ul class="list-unstyled">
-      <li><%= link_to "Six Million Stories", '#'%></li>
+      <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Contact", '#'%></li>
+      <li><%= link_to "For Teachers", for_teachers_path%></li>
     </ul>
   </nav>
 </footer>
