--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
     <div class="container">
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <div class="card">
+        <div class="card-body">
+          <%= debug(params) if Rails.env.development? %>
+        </div>
+      </div>
     </div>
   </body>
 </html>
