--- a/app/views/timers/show.html.erb
+++ b/app/views/timers/show.html.erb
@@ -1,7 +1,8 @@
 <div class="container show-body">
   <div id='counter'>
     <h2><clock><%= @timer.elapsed_time %></clock></h2>
-    <script data-turbolinks-eval=false>
+    <meta name="turbolinks-cache-control" content="no-preview">
+    <script>
       var myVar = setInterval(myTimer, 1000);
       var time = <%= @timer.elapsed_time %>
       function myTimer() {
@@ -12,6 +13,7 @@
   </div>
   
   <hr>
+  
   <div class="container">
     <div class="box">
       <div class="row row-one">
