--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -185,3 +185,20 @@ input {
   margin-bottom: 20px;
   background: $gray-100;
 }
+
+/* errors */
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .is-invalid;
+  .form-control {
+    color: red;
+  }
+}
