--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,6 +1,6 @@
 <% if @timer.errors.any? %>
   <div id="error_explanation">
-    <div class="alert alert-danger">
+    <div class="alert alert-danger" role="alert">
       The form contains <%= pluralize(@timer.errors.count, "error") %>.
     </div>
     <ul>
