Fix the error messages display

--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -2,8 +2,9 @@
   New Counter
 </h1>
 <div class="wrapper">
-  <%= form_with model: @timer, :html => {:class => "timer-form"} do |f| %>
-    <%= render 'shared/error_messages', target: @timer %>
+  
+  <%= form_for @timer, :html => {:class => "timer-form"} do |f| %>
+    <%= render 'shared/error_messages' %>
     <div class="form-group">
       <%= f.label :email, class: "control-label" %>
       <%= f.email_field :email, class: "form-control" %>
