--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -188,17 +188,17 @@ input {
 
 /* errors */
 
-// #error_explanation {
-//   color: red;
-//   ul {
-//     color: red;
-//     margin: 0 0 30px 0;
-//   }
-// }
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
 
-// .field_with_errors {
-//   @extend .is-invalid;
-//   .form-control {
-//     color: red;
-//   }
-// }
+.field_with_errors {
+  @extend .is-invalid;
+  .form-control {
+    color: red;
+  }
+}
