Functional story creation via user input for admin purposes

--- a/app/views/timers/show.html.erb
+++ b/app/views/timers/show.html.erb
@@ -22,4 +22,7 @@
     </div>
   </div>
   
+  <div style="text-align:center;">
+    <%= button_to 'New Story', root_path, method: :get, class: "btn btn-primary" %>
+  </div>
 </div>
