--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -97,3 +97,20 @@ footer {
     }
   }
 }
+
+.wrapper {
+  width: 100%;
+  height: auto; 
+  margin: 0 auto; 
+  display: block;
+  text-align: center;
+}
+
+.story-form {
+  width: 50%; 
+  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
+  text-align: left;
+}
