--- a/app/views/timers/new.html.erb
+++ b/app/views/timers/new.html.erb
@@ -3,7 +3,7 @@
 </h1>
 <div class="wrapper">
   
-  <%= form_for @timer, :html => {:class => "timer-form"} do |f| %>
+  <%= form_for @timer, :html => {:class => "input-form"} do |f| %>
     <%= render 'shared/error_messages' %>
     <div class="form-group">
       <%= f.label :email, class: "control-label" %>
