--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,7 +25,7 @@
       <% else %>
         <div class="wrapper text-center">
           <div class="btn-group">
-            <%= button_to 'Enter Code', '#', method: :get, class: "btn btn-primary"%>
+            <%= button_to 'Admin', timers_index_path, method: :get, class: "btn btn-primary"%>
             <%= button_to 'New Counter', new_timer_path, method: :get, class: "btn btn-primary"%>
             <%= button_to 'About', about_path, method: :get, class: "btn btn-primary"%>
           </div>
