--- a/app/views/timers/show.html.erb
+++ b/app/views/timers/show.html.erb
@@ -25,6 +25,6 @@
   </div>
   
   <div style="text-align:center;">
-    <%= button_to 'New Story', root_path, method: :get, class: "btn btn-primary" %>
+    <%= button_to 'Next Story', root_path, method: :get, class: "btn btn-primary" %>
   </div>
 </div>
