--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
       <% if cookies[:lockup] %>
         <li class="nav-item"> <%= link_to "Timers", timers_index_path, class: "nav-link" %></li>
         <li class="nav-item"> <%= link_to "New Story", new_story_path, class: "nav-link" %></li>
+        <li class="nav-item"> <%= link_to "Stories", stories_path, class: "nav-link" %></li>
       <% end %>
       <% if logged_in? %>
         <li class="nav-item"> <%= link_to "Reset Timer", '#', class: "nav-link" %></li>
