--- a/app/views/timers/show.html.erb
+++ b/app/views/timers/show.html.erb
@@ -20,7 +20,7 @@
     <div class="box">
       <div class="row row-one">
         <div class="col-md-12 imageholder">
-          <% if (@story.img.present?) %>
+          <% if @story.img.present? %>
             <img class="img-fluid img-thumbnail visual img-responsive pull-left" src=<%= @story.img %>></img>
           <% end %>
           
