reformat index lists

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -56,11 +56,11 @@ blockquote {
 
 /* index */
 
-#timers {
+.object-index {
   list-style-type: none;
 }
 
-#timers-item {
+#object-item {
   margin: 5px 0;
 }
 
