Update static pages and general formatting

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,47 @@
 <h1>About</h1>
 
 <h3>Our Purpose</h3>
-<p class="lead">This is our purpose.</p>
+<p class="lead">
+  An an application that visualizes the enormity of the number of deaths reported
+  in mass tragedies, specifically the holocaust, by recognizing that within
+  every singular digit in these large numbers is the story of a human being.
+</p>
+
+<h3>Our Inspiration</h3>
+<p class="lead">
+  The idea was inspired by our 10th grade english teacher when she was introducing
+  our unit on the holocaust and the works of Elie Wiesel. We were instructed to
+  enter the enormous numbers of people killed in each country, helping us to
+  fully appreciate the enormity of those numbers. Although the excersize helped
+  us to get a grasp on the idea, there was still a natural disconnect to the 
+  massive loss of human life, as it is difficult to process such loss all at once.
+  As Mrs. Milano said,
+</p>
+<blockquote class="blockquote">
+  <p>
+    If I could make you guys all type 1+1+1 and so on until you got to six
+    million, I would do it.
+  </p>
+  <footer class="blockquote-footer"><cite title="Source Title">Mrs. Milano, CVHS</cite></footer>
+</blockquote>
+<p class="lead">
+  It is this wish that this site aims to achieve.
+</p>
+
+<h3>Our Goal</h3>
+
+<p class="lead">
+  With our application, we hope to allow users to begin to comprehend the huge
+  numbers often referenced when referring to mass tragedies, specifically the
+  holocaust. We find it to be extremely important to recognize and value the
+  individuality of every life lost, something we hope for our users to achieve
+  through the visualization this site provides.
+</p>
+
+<h3>Usage</h3>
+
+<p class="lead">
+  The user can create their own counter, which will count every second, even when
+  the user is not present. They have the option to enter an email, where they will
+  be emailed a link to retrieve their counter if they accidentally log out
+</p>
