--- a/app/views/static_pages/for_teachers.html.erb
+++ b/app/views/static_pages/for_teachers.html.erb
@@ -7,7 +7,7 @@
   every singular digit in these large numbers is the story of a human being.
 </p>
 
-<h3>Potential Uses in the classroom</h3>
+<h3>Potential Uses in the Classroom</h3>
 <p class="lead">
-  You can use it for fun!
+  
 </p>
