--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,13 @@
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
-      <div class="card">
-        <div class="card-body">
-          <%= debug(params) if Rails.env.development? %>
+      <% if Rails.env.development? %>
+        <div class="card">
+          <div class="card-body">
+            <%= debug(params) %>
+          </div>
         </div>
-      </div>
+      <% end %>
     </div>
   </body>
 </html>
