--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -43,5 +43,5 @@
 <p class="lead">
   The user can create their own counter, which will count every second, even when
   the user is not present. They have the option to enter an email, where they will
-  be emailed a link to retrieve their counter if they accidentally log out
+  be emailed a link to retrieve their counter if they accidentally log out.
 </p>
