Update for-teachers page with carousel

--- a/app/views/static_pages/for_teachers.html.erb
+++ b/app/views/static_pages/for_teachers.html.erb
@@ -8,6 +8,86 @@
 </p>
 
 <h3>Potential Uses in the Classroom</h3>
-<p class="lead">
-  
-</p>
+
+<div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
+
+    <!--Controls-->
+    <!-- <div class="controls-top">
+        <a href="#multi-item-example" data-slide="prev"><i class="fa fa-chevron-left"></i></a>
+        <a href="#multi-item-example" data-slide="next"><i class="fa fa-chevron-right"></i></a>
+    </div> -->
+      
+    <!--/.Controls-->
+
+
+    <!--Slides-->
+    <div class="carousel-inner" role="listbox">
+
+        <!--First slide-->
+        <div class="carousel-item active">
+          <div class="card">
+            <h5 class="card-header">Usage One</h5>
+            <div class="card-body">
+              <h5 class="card-title">Unit-Based Application</h5>
+              <p class="card-text">
+                The teacher could begin a new timer at the beginning of a <b>unit
+                on WWII, the holocaust, Night by Elie Wiesel,</b> or another topic
+                which relates to these themes. The teacher could then discuss with
+                the students what each number represents, and the importance of
+                recognizing the individuality of victims. The teacher could check
+                in periodically with the counter, having kids guess how big the
+                number has become, <b>demonstrating the immensity of the number 
+                6 million.</b>
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--/.First slide-->
+
+        <!--Second slide-->
+        <div class="carousel-item">
+          <div class="card">
+            <h5 class="card-header">Usage Two</h5>
+            <div class="card-body">
+              <h5 class="card-title">Use for the stories</h5>
+              <p class="card-text">
+                If students all have personal access to the site, you could allow
+                them to <b>explore the stories,</b> helping them learn about
+                the individual lives lost in the holocaust.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--/.Second slide-->
+
+        <!--Third slide-->
+        <div class="carousel-item">
+          <div class="card">
+            <h5 class="card-header">Usage Three</h5>
+            <div class="card-body">
+              <h5 class="card-title">Interactive Usage</h5>
+              <p class="card-text">
+                The teacher can <b>share the link which was sent by email</b> upon sign
+                up with the students, who would then have access to the counter
+                and would be able to <b>view it at home or in class.</b>
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--/.Third slide-->
+
+    </div>
+    <!--/.Slides-->
+    
+    <div class="controls-top">
+      <a class="carousel-control-prev btn-floating" href="#multi-item-example" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#multi-item-example" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+</div>
+<!--/.Carousel Wrapper-->
