--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -209,3 +209,52 @@ input {
   text-align: center;
   margin-top: 15px;
 }
+
+cite {
+  font-weight: 100;
+}
+
+.page-content {
+  margin-top: 25px;
+}
+
+.carousel {
+  margin-top: 25px;
+}
+
+.carousel-control-prev {
+  margin-left: -100px;
+}
+
+.carousel-control-next {
+  margin-right: -100px;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  // border-radius: 50%;
+  // border: 1px solid black;
+  background-image: none;
+}
+
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 55px;
+  color: #a70000;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: #a70000;
+}
+
+.carousel-item {
+  width: 100%;
+  height: 15em;
+}
