--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
+    <% if controller.action_name == "inspiration"%>
+      <div class="container-fluid">
+    <% else %>
+      <div class="container">
+    <% end %>
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
