--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,41 +1,27 @@
 <h1>About</h1>
 
 <div class="page-content">
-  <h3>Our Purpose</h3>
-  <p class="lead">
-    An an application that visualizes the enormity of the number of deaths reported
-    in mass tragedies, specifically the holocaust, by recognizing that within
-    every singular digit in these large numbers is the story of a human being.
-  </p>
   
-  <h3>Our Inspiration</h3>
+  <h3>The Problem</h3>
+  
   <p class="lead">
-    The idea was inspired by our 10th grade english teacher when she was introducing
-    our unit on the holocaust and the works of Elie Wiesel. We were instructed to
-    enter the enormous numbers of people killed in each country, helping us to
-    fully appreciate the enormity of those numbers. Although the excersize helped
-    us to get a grasp on the idea, there was still a natural disconnect to the 
-    massive loss of human life, as it is difficult to process such loss all at once.
-    As Mrs. Milano said,
-  </p>
-  <blockquote class="blockquote">
-    <p>
-      "If I could make you guys all type 1+1+1 and so on until you got to six
-      million, I would do it."
-    </p>
-    <cite title="Source Title">Mrs. Milano, CVHS</cite>
-  </blockquote>
-  <p class="lead">
-    It is this wish that this site aims to achieve.
+    Often times, when dealing with issues of mass tragedies in faraway lands from
+    long ago ages, large numbers with many zeros are referenced when referring
+    to the people of these events. <b>It can be all too easy to see these numbers
+    and not take the time to process them.</b> When referring to human tragedies,
+    the difference in perception between 5 deaths and 10 deaths seems massive,
+    while the difference between 6,000,000 and 6,000,005 seems negligible.
+    In reality, <b>each one of these deaths is a human life, and deserves to be
+    treated as such.</b>
   </p>
   
   <h3>Our Goal</h3>
   
   <p class="lead">
-    With our application, we hope to allow users to begin to comprehend the huge
-    numbers often referenced when referring to mass tragedies, specifically the
-    holocaust. We find it to be extremely important to recognize and value the
-    individuality of every life lost, something we hope for our users to achieve
+    With our application, we hope to allow users to begin to <b>comprehend the huge
+    numbers often referenced when referring to mass tragedies</b>, specifically the
+    holocaust, by creating a visualization of the . We find it to be extremely important to recognize and value the
+    <b>individuality of every life lost</b>, something we hope for our users to achieve
     through the visualization this site provides.
   </p>
   
