Try to fix the 406 error

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,7 +1,7 @@
 /* Custom Variables */
 
 $theme-colors: (
-  "primary": #AD4337
+  "primary": #A70000
 );
 
 @import "bootstrap";
@@ -16,6 +16,7 @@ $red-100: #DE7464;
 $red-200: #C45648;
 $red-300: #AD4337;
 $red-400: #953228;
+$red-500: #A70000;
 
 $grey-alt-100: #FEFAF7;
 $grey-alt-200: #E7E1DD;
