reorganize structure with asset pipeline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CounterApp</title>
+    <title>SixMillionStories</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" />
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'jquery_ujs.js' %>
+    
   </head>
 
   <body>
